--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'American wit and humor'
 - !lcc 'PS'
 - !lcsh 'American poetry'
+- GITenberg
 title: 'The Old Soldier''s Story: Poems and Prose Sketches'
 url: http://www.gutenberg.org/ebooks/32335
